--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "*Do not* change this setting if you wish run Kiali under different server root.",
     "Instead update 'web_root' in Kaili config map in OpenShift console."
   ],
-  "homepage": "./",
+  "homepage": "/",
   "bugs": {
     "url": "https://github.com/kiali/kiali/issues"
   },
